hphp/hack/test/typecheck/ppl/extends_interface2.php
<?hh // strict

// A ppl interface can only extend ppl classes

interface BaseInterface {
}

<<__PPL>>
interface ChildClass extends BaseInterface {
}
